--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: techsolutions-ingress
+  name: knowledgehub-ingress
   namespace: default
   annotations:
     kubernetes.io/ingress.class: "nginx"
@@ -12,17 +12,17 @@ metadata:
 spec:
   tls:
   - hosts:
-    - techsolutions.yourdomain.com
-    secretName: techsolutions-tls
+    - knowledgehub.yourdomain.com
+    secretName: knowledgehub-tls
   rules:
-  - host: techsolutions.yourdomain.com
+  - host: knowledgehub.yourdomain.com
     http:
       paths:
       - path: /(.*)
         pathType: Prefix
         backend:
           service:
-            name: techsolutions-service
+            name: knowledgehub-service
             port:
               number: 80
   - http:
@@ -31,6 +31,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: techsolutions-service
+            name: knowledgehub-service
             port:
               number: 80
